[package]
name = "lignum-rs"
version = "0.1.0"
edition = "2024"

[features]
default = ["cairo", "svg"]
cairo = ["dep:cairo-rs"]
svg = ["dep:quick-xml", "dep:png", "dep:base64"]

[dependencies]
cairo-rs = { version = "0.21.5", optional = true }
quick-xml = { version = "0.38.4", optional = true }
png = { version = "0.18.0", optional = true }
base64 = { version = "0.22.1", optional = true }
